# rt

./: CMakeLists.txt  Makefile  README.md  author  cl_wrap.h  cl_wrapper.c  create.c  hooks.c  kernel.cl  main.c  scene.c  scenes.c
include/: cl_wrap.h  ft_rt.h  ft_rtv.h
libft/: Makefile  ft_realloc.c  ft_stringview_destruct.c  ft_strsplit_inplace.c  ft_swap.c  ft_vectorset.c
libft/includes/: libft.h
src/: cl_wrapper.c
